# teleop_data

./: LICENSE  custom_tdvp_test.py  tdvp.py  tdvp_big.py  tdvp_preprocessing.py  tdvp_small_test.py  tdvp_test.py  trial.py
franka_teleoperation/: CMakeLists.txt  package.xml
franka_teleoperation/cfg/: panda_leader_compliance_param.cfg
franka_teleoperation/include/franka_teleoperation/: franka_leader_impendance_controller.h
franka_teleoperation/launch/: franka_camera_data.launch  franka_side_camera_data.launch  franka_top_camera_data.launch
franka_teleoperation/script/: data_collection.py  franka_two_arm_teleop.py  two_arm_teleop.py
franka_teleoperation/src/: franka_leader_impedance_controller.cpp
launch/: data_collection.launch  franka_camera_data.launch  franka_zero_torque.launch
panda_moveit_config/config/: panda_arm.xacro  panda_gripper_controllers.yaml
panda_moveit_config/launch/: move_group.launch  moveit.rviz
panda_teleoperation/: CMakeLists.txt  package.xml  panda_teleoperation_plugin.xml
panda_teleoperation/cfg/: panda_leader_compliance_param.cfg
panda_teleoperation/config/: cameras_nlp.perspective  cameras_teleop.perspective  panda_follower_control_node.yaml  panda_follower_controller.yaml  panda_follower_teleop_params.yaml  panda_follower_teleop_tools.yaml  panda_leader_control_node.yaml  panda_leader_controller.yaml
panda_teleoperation/include/panda_teleoperation/: franka_leader_impendance_controller.h
panda_teleoperation/launch/: data_collection_and_trials_nlp.launch  data_collection_and_trials_teleop.launch  external_camera.launch  franka_client.launch  haptic_based_teleoperation.launch  panda_follower.launch  panda_leader.launch
panda_teleoperation/script/: haptic_based_teleoperation.py  move_gripper_cmd.py
panda_teleoperation/src/: franka_leader_impedance_controller.cpp
panda_teleoperation/xacro/: franka_arm.urdf.xacro  franka_camera_and_support.urdf.xacro  intel_d435.urdf.xacro
script/: data_collection.py  franka_two_arm_teleop.py
