<?xml version="1.0"?>
<package format="2">
  <name>franka_teleoperation</name>
  <version>0.0.0</version>
  <description>The franka_teleoperation package</description>

  <maintainer email="s.venkatesh779@gmail.com">Venkatesh</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>franka_control</build_depend>
  <build_depend>franka_description</build_depend>
  <build_depend>franka_example_controllers</build_depend>
  <build_depend>panda_moveit_config</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>franka_control</build_export_depend>
  <build_export_depend>franka_description</build_export_depend>
  <build_export_depend>franka_example_controllers</build_export_depend>
  <build_export_depend>panda_moveit_config</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_example_controllers</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>


 
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>

  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/franka_teleoperation_plugin.xml"/>
  </export>
</package>
